--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,18 @@
 body {
   background-color: #9FBFB9;
 }
+
+h3 {
+  font-size: 1.5em;
+}
+
+h4 {
+  font-size: 1.5em;
+}
+
+footer {
+  padding: 16px 0; 
+  text-align: center; 
+  background-color: #2B2B2B; 
+  color: #FFFFFF;
+}
