Apply selected Google Fonts to all text

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,12 @@
+@import url('https://fonts.googleapis.com/css?family=Aclonica|Montserrat');
+
 body {
   background-color: #9FBFB9;
+  font-family: 'Montserrat', sans-serif;
+}
+
+h1,h2,h3,h4,h5,h6 {
+  font-family: 'Aclonica', sans-serif;
 }
 
 h3 {
