--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,11 @@ footer {
   margin-right: -8px;
 }
 
+main {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
 /***********************************************
 LINK STYLING
 ***********************************************/
