--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,15 @@ footer {
 main {
   max-width: 1200px;
   margin: 0 auto;
+  min-height: calc(100vh - 147px);
+}
+
+main *:first-child {
+  margin-top: 0px;
+}
+
+main *:last-child {
+  margin-bottom: 0px;
 }
 
 /***********************************************
