--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,8 @@
 body {
   margin: 0px;
   background-color: #CECECE;
+  background-image: url('images/mediterranean_smaller.jpg');
+  background-size: cover;
 }
 
 h1,h2,h3,h4,h5,h6 {
